--- a/.styleci.yml
+++ b/.styleci.yml
@@ -1,8 +1,9 @@
-preset: laravel
-version: 8
-disabled:
-  - no_unused_imports
-finder:
-  not-name:
-    - index.php
-    - server.php
+php:
+  preset: laravel
+  version: 8
+  disabled:
+    - no_unused_imports
+  finder:
+    not-name:
+      - index.php
+      - server.php
